cabal-version:       2.4
name:                network-packet-linux
version:             0.1.0.0
build-type:          Configure
license:             BSD-3-Clause
license-file:        LICENSE
maintainer:          Mads Rolsdorph
stability:           alpha
homepage:            https://github.com/rolsdorph/network-packet-linux
bug-reports:         https://github.com/rolsdorph/network-packet-linux/issues
category:            Network
extra-source-files:  cabal.project
                     configure config.status configure.ac
                     include/LinuxDef.h include/PacketLinuxConfig.h.in
                     vendor/network/Network/Socket/ReadShow.hs
                     vendor/network/tests/Network/Test/Common.hs
                     vendor/network/LICENSE
                     vendored-network/Setup.hs vendored-network/vendored-network.cabal
                     vendored-network-test/Setup.hs vendored-network-test/vendored-network-test.cabal

library
  exposed-modules:     Network.Socket.Linux
  other-modules:       Network.Socket.Linux.Types
  other-extensions:    PatternSynonyms
  build-depends:       base ^>=4.13.0.0, network^>=3.1.0, vendored-network
  include-dirs:        include
  includes:            PacketLinuxConfig.h
  build-tool-depends:  hsc2hs:hsc2hs
  default-language:    Haskell2010

-- These tests require CAP_NET_RAW and must therefore run as root, hence
-- the separate test-suite
test-suite socketspec
  hs-source-dirs: test-socket
  main-is: Spec.hs
  other-modules: Network.Socket.Linux.LinuxSpec
  type: exitcode-stdio-1.0
  ghc-options: -Wall
  build-tool-depends: hspec-discover:hspec-discover
  build-depends:
    base,
    bytestring,
    HUnit,
    network^>=3.1.0,
    vendored-network-test,
    network-packet-linux,
    hspec,
    QuickCheck

test-suite typespec
  hs-source-dirs: test-types
  main-is: Spec.hs
  other-modules: Network.Socket.Linux.TypeSpec
  type: exitcode-stdio-1.0
  ghc-options: -Wall
  build-tool-depends: hspec-discover:hspec-discover
  build-depends:
    base,
    bytestring,
    HUnit,
    network^>=3.1.0,
    vendored-network-test,
    network-packet-linux,
    hspec,
    QuickCheck
