cabal-version:       2.4
name:                network-packet-linux
version:             0.1.0.0
synopsis:            Types for working with Linux packet sockets
description:
    @network-packet-linux@ provides types that makes it possible to use the
    @network@ package with Linux packet sockets. Packet sockets are described
    in [packet (7)](https://man7.org/linux/man-pages/man7/packet.7.html).

    As of version 3.0.0, the @network@ package provides a socket API that is
    implemented in terms of the @SocketAddress@ typeclass.
    @network-packet-linux@ provides @SockAddrLl@, a @SocketAddress@ instance
    that maps to the @sockaddr_ll@ struct.

    Additionally, @network-packet-linux@ provides some convenience types:
    @ProtocolId@ (an enumeration of the Ethernet protocol IDs defined in
    @<linux/if_ether.h>@) and @PacketType@ (enumerating the packet types
    defined in @<linux/if_packet.h>@).
license:             BSD-3-Clause
license-file:        LICENSE
maintainer:          Mads Rolsdorph
stability:           alpha
homepage:            https://github.com/rolsdorph/network-packet-linux
bug-reports:         https://github.com/rolsdorph/network-packet-linux/issues
category:            Network
build-type:          Configure
extra-source-files:  cabal.project
                     CHANGELOG.md
                     configure config.status configure.ac
                     include/LinuxDef.h include/PacketLinuxConfig.h.in
                     vendor/network/Network/Socket/ReadShow.hs
                     vendor/network/tests/Network/Test/Common.hs
                     vendor/network/LICENSE
                     vendored-network/Setup.hs vendored-network/vendored-network.cabal
                     vendored-network-test/Setup.hs vendored-network-test/vendored-network-test.cabal

source-repository head
  type: git
  location: git@github.com:rolsdorph/network-packet-linux.git

library
  exposed-modules:     Network.Socket.Linux
  other-modules:       Network.Socket.Linux.Types
  other-extensions:    PatternSynonyms
  build-depends:       base ^>=4.13.0.0, network^>=3.1.0, vendored-network
  include-dirs:        include
  includes:            PacketLinuxConfig.h
  build-tool-depends:  hsc2hs:hsc2hs
  default-language:    Haskell2010

test-suite listen-example
  hs-source-dirs:      examples
  main-is:             ListenToInterface.hs
  type:                exitcode-stdio-1.0
  build-depends:       base, bytestring, network, network-packet-linux
  default-language:    Haskell2010

-- These tests require CAP_NET_RAW and must therefore run as root, hence
-- the separate test-suite
test-suite socketspec
  hs-source-dirs: test-socket
  main-is: Spec.hs
  other-modules: Network.Socket.Linux.LinuxSpec
  type: exitcode-stdio-1.0
  ghc-options: -Wall
  build-tool-depends: hspec-discover:hspec-discover
  build-depends:
    base,
    bytestring,
    HUnit,
    network^>=3.1.0,
    vendored-network-test,
    network-packet-linux,
    hspec,
    QuickCheck
  default-language:    Haskell2010

test-suite typespec
  hs-source-dirs: test-types
  main-is: Spec.hs
  other-modules: Network.Socket.Linux.TypeSpec
  type: exitcode-stdio-1.0
  ghc-options: -Wall
  build-tool-depends: hspec-discover:hspec-discover
  build-depends:
    base,
    bytestring,
    HUnit,
    network^>=3.1.0,
    vendored-network-test,
    network-packet-linux,
    hspec,
    QuickCheck
  default-language:    Haskell2010
