cabal-version:       2.4
name:                vendored-network-test
description:         Internal helper package to export Network.Test.Common from upstream
version:             0.1.0.0
license-file:        LICENSE
maintainer:          Mads Rolsdorph
category:            Network
build-type:          Simple

library
  hs-source-dirs:      ../vendor/network/tests
  exposed-modules:     Network.Test.Common
  build-depends:
    base,
    bytestring,
    directory,
    HUnit,
    network,
    hspec
  default-language:    Haskell2010
