cabal-version:       2.4
name:                vendored-network
description:         Internal helper package to export Network.Socket.ReadShow from upstream
version:             0.1.0.0
license-file:        LICENSE
maintainer:          Mads Rolsdorph
category:            Network
build-type:          Simple

library
  hs-source-dirs:      ../vendor/network
  exposed-modules:     Network.Socket.ReadShow
  build-depends:       base >= 4.12 && < 5,
  default-language:    Haskell2010
